--- a/style.css
+++ b/style.css
@@ -6,37 +6,14 @@ body {
   background: #f0f0f0;
 }
 
-#chatSection {
-  display: none;
-  margin-top: 20px;
+form {
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
-#messageArea {
-  height: 200px;
-  overflow-y: auto;
-  border: 1px solid #ccc;
-  background: #fff;
-  padding: 10px;
+nav, a {
+  display: block;
   margin-bottom: 10px;
-}
-
-.message.sender {
-  text-align: right;
+  text-decoration: none;
   color: blue;
-}
-
-.message.receiver {
-  text-align: left;
-  color: green;
-}
-
-video {
-  width: 48%;
-  max-height: 200px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-form > * {
-  margin: 5px 0;
 }
